--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,6 +3,14 @@
 {% block content %}
 
 <section class="vh-100 gradient-custom">
+  {% if request.GET.command == 'verification' %}
+
+    <div class="card mx-auto alert alert-info text-center py-5" role="alert" style="max-width: 1024px; margin-top:100px;">
+    You're almost there! We've sent a verification link to your email at <b>{{request.GET.email}}</b> Just click on the link to complete your registration.
+    <br><br>
+    If you've already activated your account, you can <a href="{% url 'login' %}">sign in here</a>.
+</div>
+  {% else %}
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -28,7 +36,7 @@
                   <label class="form-label" for="typePasswordX">Password</label>
                 </div>
 
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="{% url 'forgot_password' %}">Forgot password?</a></p>
 
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
               </div>
@@ -44,6 +52,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
 </section>
 
 {% endblock %}
