--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,20 @@
 {% block content %}
 
 {% include 'includes/alerts.html' %}
-<h2>You are welcome.</h2>
+<div>
+    <h2>
+    You are welcome.
+    <br>
+    <br>
+    Homepage under construction.
+</h2>
+
+<a href="{% url 'logout' %}"><button class="btn btn-outline-dark btn-lg px-5" type="submit">Logout</button></a>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <!-- MDB JS -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
-</body>
-</html>
 
 {% endblock %}
